# puppetmaster

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md  api.json  install.sh  patch_file.rs  patch_handlers_bash.sh  patch_handlers_files.sh  patch_main.rs  patch_readme.sh  replace.rs  test_download.rs  test_md.rs
.claude/skills/opencode-rs-sdk/: SKILL.md
.github/workflows/: release.yml
invoices/: invoice.typ
locales/: en.toml  ru.toml
migrations/: 001_initial.sql
skills/telegram-notify/: SKILL.md
src/: config.rs  error.rs  handlers.rs  helpers.rs  main.rs  markdown.rs  onboarding.rs  state.rs
src/bot/: commands.rs  handlers.rs  middleware.rs  mod.rs
src/i18n/: keys.rs  mod.rs
src/opencode/: events.rs  mod.rs  types.rs
src/scheduled_task/: db.rs  mod.rs
src/settings/: db.rs  mod.rs
tools/tg-notify/: Cargo.toml
tools/tg-notify/src/: main.rs
