[package]
name = "opencode-telegram-bot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures-util = "0.3.32"
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
urlencoding = "2.1.3"
