[package]
name = "puppetmaster"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dotenvy = "0.15.7"
futures-util = "0.3.32"
pulldown-cmark = "0.13.3"
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "process"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
unicodeit = "0.2.1"
urlencoding = "2.1.3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/puppetmaster-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
