[package]
name = "tg-notify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
mime_guess = "2.0.5"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
